...
            return view
        }()
        containerView.addSubview(dateLabel)
        
        captureTypeLabel = {
            let view = UILabel(frame: CGRect(x: 16.0, y: thumbnailView.frame.maxY + 32, width: containerView.bounds.width - 32, height: 16))
            view.text = (capture.isVideo ? "Game Clip" : "Screenshot")
            view.font = view.font.withSize(13.0)
            view.textColor = UIColor(red: 114/255, green: 114/255, blue: 114/255, alpha: 1.0)
            return view
        }()
        containerView.addSubview(captureTypeLabel)
        
        shareButton = {
            let view = UIButton(frame: CGRect(x: containerView.bounds.width - 40, y: thumbnailView.frame.maxY + 17, width: 28.0, height: 25))
            view.setImage(UIImage(named: "share_enabled"), for: .normal)
            view.addTarget(self, action: #selector(sharePressed(_:)), for: .touchUpInside)
            view.accessibilityIdentifier = "Share"
            return view
        }()
        containerView.addSubview(shareButton)
        
        shadowView.addSubview(containerView)
    }
...
