...
        gamertagTextField = {
            let textField = UITextField(frame: CGRect(x: 18.0, y: capturesLabel.frame.maxY + 14.0, width: containerView.bounds.width - 36, height: 44))
            textField.layer.cornerRadius = 10.0
            textField.layer.borderWidth = 2.0
            textField.layer.borderColor = UIColor.buttonBlue.withAlphaComponent(0.5).cgColor
            textField.font = textField.font?.withSize(24)
            textField.attributedPlaceholder = NSAttributedString(string: "Gamertag", attributes: [NSAttributedString.Key.foregroundColor : UIColor.buttonBlue.withAlphaComponent(0.5)])
            textField.textColor = UIColor.buttonBlue.withAlphaComponent(1.0)
            textField.textAlignment = .center
            textField.autocapitalizationType = .none
            textField.autocorrectionType = .no
            textField.accessibilityIdentifier = "Gamertag"
            textField.addTarget(self, action: #selector(textFieldDidChange(_:)), for: .editingChanged)
            return textField
        }()
        containerView.addSubview(gamertagTextField)
        
        signInButton = {
            let button = TransitionButton(frame: CGRect(x: 18.0, y: gamertagTextField.frame.maxY + 16.0, width: containerView.bounds.width - 36, height: 44))
            button.setTitle("Sign In", for: .normal)
            button.titleLabel?.font = button.titleLabel?.font.withSize(24.0)
            button.setTitleColor(.white, for: .normal)
            button.backgroundColor = UIColor.buttonBlue
            button.cornerRadius = 10.0
            button.addTarget(self, action: #selector(signInButtonTouchUpInside(_:)), for: .touchUpInside)
            button.accessibilityIdentifier = "Sign In"
...
