...
        
        view.backgroundColor = .buttonBlue
        
        loadingView = UIImageView(frame: CGRect(x: view.bounds.midX - 40, y: view.bounds.midY - 40, width: 80, height: 80))
        loadingView.image = UIImage(named: "loading_spinner")
        loadingView.alpha = 0.0
        loadingView.accessibilityIdentifier = "Loading"
        
        view.addSubview(loadingView)
        
        NotificationCenter.default.addObserver(self, selector: #selector(startAnimation), name: UIApplication.willEnterForegroundNotification, object: nil)
        
        getCaptures(user: user).onSuccess { captures in
...
