...
    var shareButton: UIButton!
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        view.backgroundColor = .white
        view.accessibilityIdentifier = "Clip Editor"
        
        doneButton = {
            let button = UIButton()
            button.setTitle("Done", for: .normal)
            button.setTitleColor(.buttonBlue, for: .normal)
            button.titleLabel?.font = UIFont.systemFont(ofSize: 16.0)
...
